<resources>
    <string name="map_api_key">AIzaSyCPSFbJxqdAISD6XP0QwbVCsYEE6W6GLLc</string>


    <string name="id_admob">ca-app-pub-2808214978106183~5986950977</string>
    <string name="admob_native_1">ca-app-pub-2808214978106183/5770300883</string>
    <string name="admob_interstitial_1">ca-app-pub-2808214978106183/3144137541</string>
    <string name="admob_interstitial_2">ca-app-pub-2808214978106183/8230805084</string>
    <string name="admob_banner">ca-app-pub-2808214978106183/5340917860</string>

    <string name="admob_native_test">ca-app-pub-3940256099942544/2247696110</string>
    <string name="admob_interstitial_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_banner_test">ca-app-pub-3940256099942544/6300978111</string>

    <string name="app_name">Theme Messenger</string>
    <string name="archived">Archived</string>
    <string name="blocked_contacts">Blocked contacts</string>
    <string name="dark_mode">Enable dark mode</string>
    <string name="settings">Settings</string>
    <string name="help_feedback"><![CDATA[Help & feedback]]></string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="add_contact">Add contact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tap_to_give_access_to_location">Tap to give access to Location</string>
    <string name="share_contact">Share contact</string>
    <string name="attach_file">Attach file</string>
    <string name="tap_to_give_access_to_microphone">Tap to give access to microphone</string>
    <string name="touch_and_hold">Touch and hold</string>
    <string name="enter_name_or_phone_number">Enter name or phone number</string>
    <string name="group_messages">Group messages</string>
    <string name="group_details">Group details</string>
    <string name="call">Call</string>
    <string name="search_messages">Search messages</string>
    <string name="people">People</string>
    <string name="categories">Categories</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete_this_conversation">Are you sure you want to delete this conversation ?</string>
    <string name="try_again">Try again</string>
    <string name="sms_theme">SMS theme</string>

    <string name="color">Color</string>
    <string name="background">Background</string>
    <string name="enable_light_mode">Enable light mode</string>

</resources>
