<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:showAsAction="always" />

    <item
        android:id="@+id/group_message"
        android:title="@string/group_messages" />

<!--    <item-->
<!--        android:id="@+id/archived"-->
<!--        android:title="@string/archived" />-->
    <item
        android:id="@+id/block"
        android:title="@string/blocked_contacts" />
    <item
        android:id="@+id/dark_mode"
        android:title="@string/dark_mode"
        app:showAsAction="withText" />
    <item
        android:id="@+id/light_mode"
        android:title="@string/enable_light_mode"
        app:showAsAction="withText" />

    <item
        android:id="@+id/help"
        android:title="@string/help_feedback"
        app:showAsAction="withText" />
</menu>