<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_to_parent"
    android:layout_marginEnd="@dimen/margin_to_parent"
    android:background="@drawable/bg_card"
    android:minWidth="250dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_to_parent"
        android:paddingTop="@dimen/margin_to_parent"
        android:paddingEnd="@dimen/margin_to_parent"
        android:paddingBottom="@dimen/margin_everything"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="90dp"
        android:padding="@dimen/margin_to_parent"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:text="@string/app_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginEnd="@dimen/margin_small"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/margin_to_parent"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="@color/white_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvContent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/margin_to_parent"
        android:text="@string/cancel"
        android:layout_marginEnd="@dimen/margin_small"
        android:textAllCaps="true"
        android:textColor="@color/white_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnOk"
        app:layout_constraintTop_toBottomOf="@id/tvContent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/margin_to_parent"
        android:text="@string/try_again"
        android:textAllCaps="true"
        android:textColor="@color/white_primary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@id/tvContent" />
</androidx.constraintlayout.widget.ConstraintLayout>
