<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:background="?attr/bgColor"
        android:focusableInTouchMode="true"
        tools:context="com.color.sms.messages.theme.activity.search.SearchMessagesActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/lnView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="70dp" />

                    <LinearLayout
                        android:id="@+id/lnPeople"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="@dimen/margin_everything"
                        android:paddingEnd="@dimen/margin_everything"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_everything"
                            android:layout_marginTop="@dimen/margin_everything"
                            android:text="@string/people"
                            android:textColor="?attr/textTitleColor"
                            android:textSize="16sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerPeople"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false"
                            android:paddingStart="@dimen/margin_everything"
                            android:paddingEnd="@dimen/margin_everything"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            android:orientation="horizontal"
                            tools:itemCount="2"
                            tools:listitem="@layout/list_item_contact_grid" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lnCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="visible">

                    <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_everything"
                            android:layout_marginTop="@dimen/margin_everything"
                            android:paddingStart="@dimen/margin_everything"
                            android:paddingEnd="@dimen/margin_everything"
                            android:text="@string/categories"
                            android:textColor="?attr/textTitleColor"
                            android:textSize="16sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerCategory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false"
                            android:orientation="horizontal"
                            android:paddingStart="@dimen/margin_everything"
                            android:paddingEnd="@dimen/margin_everything"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:itemCount="6"
                            tools:listitem="@layout/list_item_category" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnResults"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="70dp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerResults"
                        tools:itemCount="0"
                        tools:listitem="@layout/list_item_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgEmpty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/empty"
                        android:visibility="gone" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_5sdp"
            app:cardBackgroundColor="?attr/cardColor"
            android:layout_margin="@dimen/margin_everything"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
               >

                <mabbas007.tagsedittext.TagsEditText
                    android:id="@+id/edtSearch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_messages"
                    app:allowSpaceInTag="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btnBack"
                    app:tagsBackground="@drawable/border_rectangle_tag_contact"
                    app:tagsTextColor="?attr/textTitleColor"
                    app:tagsTextSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnBack"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
